--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,10 @@
               "buildTarget": "skybook-flights:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
